# simple-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  verify_builtin.py
docs/: agent-md.md  commands.md  configuration.md  subagents.md
docs/hooks/: README.md
plugin/: AGENT.md  config.yml
plugin/commands/: README.md  agents.md  clear.md  config.md  git-status.md  reset.md  skills.md  status.md  todos.md  version.md
plugins/: config.yml
plugins/default/: AGENT.md  config.yml
simple_agent/: __init__.py  main.py
simple_agent/api/: __init__.py  client.py  providers.py
simple_agent/cli/: __init__.py  view_logs.py
simple_agent/config/: __init__.py  settings.py
simple_agent/core/: __init__.py  events.py  llm_logger.py  runtime.py  session.py  sinks.py  subagent.py  todo_manager.py
simple_agent/resources/: __init__.py  agents.py  base.py  command_processor.py  commands.py  hooks.py  skills.py  subagents.py
simple_agent/tools/: __init__.py  dispatcher.py  registry.py
simple_agent/ui/: __init__.py  renderer.py
simple_agent/web/: analyzer.html  chat_server.py  (+1 more)
tests/: __init__.py  test_api.py  test_command_loader_namespace.py  test_command_processor.py  test_commands.py  test_config.py  test_events.py  test_grep.py  test_hooks.py  test_resources.py  test_runtime.py  test_runtime_commands.py  test_runtime_commands_integration.py  test_runtime_turn.py  test_session.py  test_sinks.py  test_subagent.py  test_todo_manager.py  test_todo_tools.py  test_tool_registry_filter.py  test_tool_registry_snapshot.py  test_tools.py  test_ui.py  test_web_chat.py
(+76 files in other folders)
