[project]
name = "simple-agent"
version = "0.1.0"
description = "A Claude Code-like CLI tool with hooks, skills, and subagents"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
license = { file = "LICENSE" }
keywords = ["cli", "agent", "claude"]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "python-frontmatter>=1.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
]

[project.scripts]
simple-agent = "simple_agent.main:main"
simple-agent-logs = "simple_agent.cli.view_logs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"